--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-html{
+*html{
     margin: 0;
     padding: 0;
 }
 
 body {
-    background:linear-gradient(red,blue,green);
+    background:linear-gradient(red,gray,violet,purple,yellow);
 }
 
 
@@ -96,6 +96,12 @@ button:hover {
 button:active {
     background-color: #38419D;
     transform: translateY(2px);
+}
+
+.buttonReset{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 h4 {
